deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      deployment: devops
  template:
    metadata:
      labels:
        deployment: devops
    spec:
      containers:
        - name: app
          image: int3lligentbra1n/devops:latest
          ports:
            - containerPort: 8080
