mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\vikto\OneDrive\Desktop\test\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\vikto\OneDrive\Desktop\test\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/laravel: "true"
        io.kompose.service: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: devops
            - name: MYSQL_PASSWORD
              value: secret
            - name: MYSQL_ROOT_PASSWORD
              value: secret
            - name: MYSQL_USER
              value: devops
            - name: SERVICE_NAME
              value: mysql
            - name: SERVICE_TAGS
              value: dev
          image: mysql:8.0
          name: mysql
          ports:
            - containerPort: 3306
          resources: {}
          tty: true
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: dbdata
            - mountPath: /etc/mysql/my.cnf
              name: mysql-claim1
      restartPolicy: Always
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata
        - name: mysql-claim1
          persistentVolumeClaim:
            claimName: mysql-claim1
status: {}
