nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\vikto\OneDrive\Desktop\test\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\vikto\OneDrive\Desktop\test\kompose.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/laravel: "true"
        io.kompose.service: nginx
    spec:
      containers:
        - image: nginx:stable-alpine
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
          tty: true
      restartPolicy: Always
status: {}
