app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\vikto\OneDrive\Desktop\test\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  ports:
    - name: "9010"
      port: 9010
      targetPort: 9000
  selector:
    io.kompose.service: app
status:
  loadBalancer: {}
