mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\vikto\OneDrive\Desktop\test\kompose.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  ports:
    - name: "4306"
      port: 4306
      targetPort: 3306
  selector:
    io.kompose.service: mysql
status:
  loadBalancer: {}
