service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  ports:
    - name: http
      port: 8080
  selector:
  app: devops
